<resources>
    <string name="app_name">Buzzi</string>
    <!--    Main screen-->
    <string name="result">Result</string>
    <string name="settings">Settings</string>
    <string name="marker">Marker</string>
    <string name="generate_random_mark">Generate random mark</string>
    <string name="undo_action">Undo action</string>
    <string name="erase_action">Erase action</string>
    <string name="clear_action">Clear action</string>
    <!--    Marker selection screen-->
    <string name="marker_name">Marker name</string>
    <string name="select_marker">Select Marker</string>
    <!--    Result window-->
    <string name="send_result">Send</string>
    <string name="unknown_marker">Unknown marker</string>
    <string name="expected_answer">Expected answer is</string>
    <string name="actual_answer">Actual answer is</string>
    <string name="correct_answer">CORRECT</string>
    <string name="incorrect_answer">INCORRECT</string>
    <!--    Settings screen-->
    <string name="settings_screen_title">Settings</string>
    <string name="user_name_title">User name</string>
    <string name="user_name_description">User name that will be shown when sending an image file \nto the server
    </string>
    <string name="prediction_mode_title">Prediction mode</string>
    <string name="prediction_mode_description">
        When prediction mode disabled app will use a special marker dataset which is needed
        to train model and send prediction result to the server.
        Otherwise, (when the mode is disabled) model will just try to predict a marker you drawn
    </string>
    <string name="network_mode_title">Local network</string>
<!--    New username window-->
    <string name="enter_user_name_title">Enter a new username</string>
    <string name="user_name_enter">Enter</string>
    <string name="user_name_cancel">Cancel</string>
    <string name="no_user_name">No user name</string>
</resources>