<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings_feature.screen.SettingsScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/arrow_back"
                app:title="@string/settings_screen_title"
                android:minHeight="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:layout_below="@id/app_bar_layout">

        <TextView
                android:id="@+id/user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_title"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/app_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/user_name_title"
                app:layout_constraintBottom_toBottomOf="@+id/user_name_title"
                tools:text="GGWP"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_description"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_linear_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_mode_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:layout_below="@id/user_name_linear_layout">

        <TextView
                android:id="@+id/prediction_mode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction_mode_title"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/prediction_mode_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/prediction_mode_title"
                app:layout_constraintBottom_toBottomOf="@+id/prediction_mode_title"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction_mode_description"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prediction_mode_switch"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_mode_linear_layout"/>
</RelativeLayout>