<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings_feature.screen.UserNameDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/minDialogWindowWidth"
            android:padding="@dimen/padding"
            tools:layout_gravity="center">

        <TextView
                android:id="@+id/enter_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_user_name_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_user_name_title"
                app:layout_constraintBottom_toTopOf="@id/cancel_button">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edit_text"
                    android:layout_width="match_parent"
                    android:lines="1"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_cancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/enter_button"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/enter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_enter"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cancel_button"
                app:layout_constraintBottom_toBottomOf="@id/cancel_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>